# formal-languages

./: README.md
nfa-dfa-translator/: CMakeLists.txt  Finite_automatas.cpp  Finite_automatas.h  Finite_automations.cpp  Finite_automations.h  README.md  Translator.cpp  builder.sh  clear.sh  clear_after_coverage.sh  edge-template.cpp  google_tests.cpp  tests.cpp  tests.txt
tools/: CMakeLists.txt  Finite_automatas.cpp  Finite_automatas.h  README.md  coverage.sh  google_tests.cpp  main.cpp  tests.txt
